--- a/public/styles.css
+++ b/public/styles.css
@@ -73,3 +73,26 @@
   height: 60px;
   text-align: center;
 }
+
+#result-emoction {
+  font-size: 30px;
+  text-align: center;
+}
+
+.layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#pose-video {
+  transform: scaleX(-1);
+}
+
+#pose-result {
+  font-size: 100px;
+  text-align: right;
+  padding: 20px 30px 0 0;
+}
